# Automated-Mp3-Gui

./: .gitignore  LICENSE  README.md  constants.ts  next.config.js  package-lock.json  package.json  postcss.config.js  splashscreen.html  tailwind.config.js  tsconfig.json  types.ts
app/: globals.css  layout.tsx  page.tsx  splashscreen.html
components/: CancelScrape.tsx  alert.tsx  app-sidebar.tsx  avatar.tsx  dialog.tsx  heading.tsx  loading.tsx  mobile-sidebar.tsx  music-sidebar-item.tsx  nav-main.tsx  nav-projects.tsx  navbar.tsx  player.tsx  sidebar-nav.tsx  sidebar.tsx  team-switcher.tsx  terminal-items.tsx  titlebar.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/python-sidecar/app/: main.py
src-tauri/python-sidecar/app/Controllers/: Controllers.txt  Deezer.py  Discogs.py  EchoNest.py  Gemini.py  Genius.py  GooglePage.py  Gracenote.py  Groq.py  Itunes.py  MusicBrainz.py  OpenAi.py  Palm.py  Shazam.py  Spotify.py  TheAudioDB.py  YoutubeMusic.py
src-tauri/python-sidecar/app/Entities/: SearchParams.py
src-tauri/python-sidecar/app/Image/: GetAlbumArt.py  tempCodeRunnerFile.py
src-tauri/python-sidecar/app/Regex/: Regex.py
src-tauri/python-sidecar/app/Services/: AlbumArt.py  DownloadMusic.py  MetaData.py  classifier.py
src-tauri/python-sidecar/app/Settings/: logging_config.py
src-tauri/python-sidecar/app/tests/: test.py
src-tauri/src/: main.rs
src-tauri/src/db/: mod.rs
src-tauri/src/edit/: mod.rs
src-tauri/src/json/: mod.rs
src-tauri/src/threading/: mod.rs
src-tauri/src/types/: mod.rs
(+59 files in other folders)
