[package]
name = "app"
version = "0.1.9"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "window-all", "notification-all", "path-all", "fs-all", "shell-all", "dialog-all"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tokio = { version = "1.33.0", features = ["full"] }
reqwest = { version="0.11", features = ["blocking"] } 
anyhow = "1"
dirs = "5.0.1"
dotenv = "0.15.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
r2d2 = "0.8.0"
r2d2_sqlite = "0.21.0"
audiotags = "0.4.1"
id3 = "1.9.0"
env_logger = "0.11.3"
log = "0.4.21"
lofty = "0.20.1"
base64 = "0.21"
chrono = "0.4"
lazy_static = "1.4"
rand = "0.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
